feat: update the algorithm of selection
