# internal/app/entity/selection.go
@@ -14,24 +14,23 @@
 package entity
 
 type Selection struct {
-	StockID          string  `gorm:"column:stock_id" json:"stockId"`
-	Name             string  `gorm:"column:name" json:"name"`
-	Category         string  `gorm:"column:category" json:"category"`
-	Date             string  `gorm:"column:exchange_date" json:"exchangeDate"`
-	Open             float32 `gorm:"column:open" json:"open"`
-	High             float32 `gorm:"column:high" json:"high"`
-	Low              float32 `gorm:"column:low" json:"low"`
-	Close            float32 `gorm:"column:close" json:"close"`
-	PriceDiff        float32 `gorm:"column:price_diff" json:"priceDiff"`
-	Concentration1   float32 `gorm:"column:concentration_1" json:"concentration1"`
-	Concentration5   float32 `gorm:"column:concentration_5" json:"concentration5"`
-	Concentration10  float32 `gorm:"column:concentration_10" json:"concentration10"`
-	Concentration20  float32 `gorm:"column:concentration_20" json:"concentration20"`
-	Concentration60  float32 `gorm:"column:concentration_60" json:"concentration60"`
-	Volume           int     `gorm:"column:volume" json:"volume"`
-	Trust            int     `gorm:"column:trust" json:"trust"`
-	Foreign          int     `gorm:"column:foreignc" json:"foreign"`
-	Hedging          int     `gorm:"column:hedging" json:"hedging"`
-	Dealer           int     `gorm:"column:dealer" json:"dealer"`
-	ExpectantHighest bool    `gorm:"column:-" json:"expectantHighest"`
+	StockID         string  `gorm:"column:stock_id" json:"stockId"`
+	Name            string  `gorm:"column:name" json:"name"`
+	Category        string  `gorm:"column:category" json:"category"`
+	Date            string  `gorm:"column:exchange_date" json:"-"`
+	Open            float32 `gorm:"column:open" json:"open"`
+	High            float32 `gorm:"column:high" json:"high"`
+	Low             float32 `gorm:"column:low" json:"low"`
+	Close           float32 `gorm:"column:close" json:"close"`
+	PriceDiff       float32 `gorm:"column:price_diff" json:"priceDiff"`
+	Concentration1  float32 `gorm:"column:concentration_1" json:"concentration1"`
+	Concentration5  float32 `gorm:"column:concentration_5" json:"concentration5"`
+	Concentration10 float32 `gorm:"column:concentration_10" json:"concentration10"`
+	Concentration20 float32 `gorm:"column:concentration_20" json:"concentration20"`
+	Concentration60 float32 `gorm:"column:concentration_60" json:"concentration60"`
+	Volume          int     `gorm:"column:volume" json:"volume"`
+	Trust           int     `gorm:"column:trust" json:"trust"`
+	Foreign         int     `gorm:"column:foreignc" json:"foreign"`
+	Hedging         int     `gorm:"column:hedging" json:"hedging"`
+	Dealer          int     `gorm:"column:dealer" json:"dealer"`
 }
